syntax = "proto3";
package stegos.replication;

import "crypto.proto";
import "blockchain.proto";

message Subscribe {
    uint64 epoch = 1;
    uint32 offset = 2;
}

message ReplicationRequest {
    oneof request {
        Subscribe subscribe_full = 1;
        Subscribe subscribe_light = 2;
    }
}

message Subscribed {
    uint64 current_epoch = 1;
    uint32 current_offset = 2;
    string network = 4;
}

message Block {
    uint64 current_epoch = 1;
    uint32 current_offset = 2;
    stegos.blockchain.Block block = 10;
}

message LightBlock {
    uint64 current_epoch = 1;
    uint32 current_offset = 2;
    stegos.blockchain.LightBlock block = 10;
}

message ReplicationResponse {
    oneof response {
        Subscribed subscribed = 1;
        Block block = 2;
        LightBlock light_block = 3;
    }
}